Update Recriando Página Inicial do Instagram.html

--- a/Recriando Página Inicial do Instagram.html
+++ b/Recriando Página Inicial do Instagram.html
@@ -4,7 +4,7 @@
         <title>Instagram</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="./style.css/">
+        <link rel="stylesheet" href="https://brayan-sant.github.io/Recriando-pagina-inicial-do-Instagram/style.css"/>
     </head>
     <body>
         <div class="instagram-wrapper">
